compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__even_number_of_multiple_bool_negations_raise_a_single_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() { let _ = !!!!True }"
---
----- SOURCE CODE
pub fn main() { let _ = !!!!True }

----- WARNING
warning: Unnecessary double negation (!!) on bool
  ┌─ /src/warning/wrn.gleam:1:25
  │
1 │ pub fn main() { let _ = !!!!True }
  │                         ^^^^ You can safely remove this.
