compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__float_literals_redundant_comparison.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() { 1.0 == 1.0 }"
---
----- SOURCE CODE
pub fn main() { 1.0 == 1.0 }

----- WARNING
warning: Redundant comparison
  ┌─ /src/warning/wrn.gleam:1:17
  │
1 │ pub fn main() { 1.0 == 1.0 }
  │                 ^^^^^^^^^^ This is always `True`

This comparison is redundant since it always succeeds.
